# hapla

./: README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
hapla/: __init__.py  admix.py  admix_cy.pyx  assoc_cy.pyx  cluster.py  cluster_cy.pyx  fatash.py  fatash_cy.pyx  functions.py  main.py  memory_cy.pyx  pca.py  predict.py  prs.py  reader_cy.pyx  regress.py  run.py  score.py  shared_cy.pyx  split.py  split_cy.pyx  struct.py
scripts/: downsampling.R  generatePheno.py  simulation.sh
src/: asso.py  asso_cy.pyx  assoc.py  assoc_cy.pyx  cluster.py  cluster_cy.pyx  functions.py  main.py  pca.py  predict.py  prs.py  reader_cy.pyx  regress.py  run.py  shared_cy.pyx  split.py
