[build-system]
requires = [
    "setuptools>=77.0.0",
    "wheel",
    "cython>3.0.0",
    "numpy>2.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "hapla"
version = "0.62.0"
description = "Framework for haplotype clustering in phased genotype data"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Jonas Meisner", email = "meisnerucph@gmail.com" }
]
dependencies = [
    "numpy>2.0.0",
    "cyvcf2>0.30.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]

[project.urls]
Homepage = "https://github.com/Rosemeis/hapla"

[project.scripts]
hapla = "hapla.main:main"